[package]
name = "dynamic_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "^1.0.0"
async-trait = "^0.1.80"
parking_lot = { version = "^0.12.3", features = ["send_guard"] }
tokio = { version = "^1.37.0", features = [
    "time",
    "macros",
    "rt-multi-thread",
    "sync",
    "tokio-macros",
] }
